  * Replaced "special_depth" and "skolemize_depth" options by "specialize"
    and "skolemize"
  * Renamed "coalesce_type_vars" to "merge_type_vars"
  * Optimized Kodkod encoding of datatypes whose constructors don't appear in
    the formula to falsify
  * Added support for codatatype view of datatypes
  * Fixed soundness bugs related to sets and sets of sets
  * Fixed monotonicity check
  * Fixed error in display of uncurried constants
  * Speeded up scope enumeration

Version 1.2.2 (16 Oct 2009)

  * Added and implemented "star_linear_preds" option
  * Added and implemented "format" option
  * Added and implemented "coalesce_type_vars" option
  * Added and implemented "max_genuine" option
  * Fixed soundness issues related to "set", "distinct", "image", "Sigma",
    "-1::nat", subset, constructors, sort axioms, and partially applied
    interpreted constants
  * Fixed error in "show_consts" for boxed specialized constants
  * Fixed errors in Kodkod encoding of "The", "Eps", and "ind"
  * Fixed display of Skolem constants
  * Fixed error in "check_potential" and "check_genuine"
  * Added boxing support for higher-order constructor parameters
  * Changed notation used for coinductive datatypes
  * Optimized Kodkod encoding of "If", "card", and "setsum"
  * Improved the monotonicity check

Version 1.2.1 (25 Sep 2009)

  * Added explicit support for coinductive datatypes
  * Added and implemented "box" option
  * Added and implemented "fast_descrs" option
  * Added and implemented "uncurry" option
  * Renamed and generalized "sync_cards" and "inductive_mood" to "mono" and "wf"
  * Fixed soundness issue related to nullary constructors
  * Fixed soundness issue related to higher-order quantifiers
  * Fixed soundness issue related to the "destroy_constrs" optimization
  * Fixed soundness issues related to the "special_depth" optimization
  * Added support for PicoSAT and incorporated it with the Nitpick package